# axi-assistant

./: .env.template  .gitignore  .pre-commit-config.yaml  ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BEHAVIOR.md  CLAUDE.md  CODE-PHILOSOPHY.md  DEBUGGING.md  Designing an AI-driven code rewrite orchestration protocol.md  HANDLER_REFACTORING_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  NOVA_DEV.md  OPUS_ARCHITECTURE_ANALYSIS.md  PLAN-agent-persistence.md  PLAN.md  README.md  REFACTORING_FINAL_SUMMARY.md  REFACTORING_SUMMARY.md  RUST_REWRITE_PLAN.md  SMOKE_TEST_RESULTS.md  SOUL.md  TELOS.md  TESTING_GUIDE.md  TESTING_PLAN.md  TEST_RESULTS.md  TODO  USER_PROFILE.md  _conflict_test.txt  agents.py  axi-bot.service  axi-procmux.service  axi-test@.service  axi_test.py  axi_types.py  bot.py  bridge.py  channels.py  config.py  (+33 more)
.claude/: settings.json
.claude/agents/: codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  thoughts-analyzer.md  thoughts-locator.md  web-search-researcher.md
.claude/commands/: build_user_profile.md  create_plan_nt.md  implement_plan.md  iterate_plan_nt.md  music_prefs_interview.md  research_codebase_nt.md  telos_interview.md
ISSUES/: hot-reload-packs-mid-session.md
TESTING/: flowcoder.md
agenthub/: __init__.py
agents/: __init__.py  _bridge.py  _discord.py  _flowcoder.py  _lifecycle.py  _messaging.py  _rate_limits.py  _shutdown.py  _state.py  _streaming.py  bridge_conn.py  discord_helpers.py  flowcoder.py  lifecycle.py  messaging.py  permissions.py  rate_limiting.py  sdk.py  shutdown_mgr.py  state.py  streaming.py
axi/: agents.py  axi_test.py  axi_types.py  bot.py  channels.py  config.py  discord_frontend.py  discord_query.py  discord_rest.py  discord_stream.py  discord_ui.py  egress_filter.py  extensions.py  flowcoder.py  flowcoder_transport.py  http_api.py  hub_wiring.py  main.py  prompts.py  rate_limits.py  schedule_tools.py  scheduler.py  shutdown.py  supervisor.py  tools.py  tracing.py  voice.py  wait_for_message.py  web_frontend.py  worktrees.py
axi-py/: pyproject.toml
axi-py/axi/: agents.py  axi_types.py  channels.py  config.py  discord_stream.py  prompts.py
axi-py/tests/: conftest.py  test_core.py
axi-rs/: Cargo.toml  build-release.sh
axi-rs/crates/axi/: Cargo.toml
axi-rs/crates/axi-bot/: Cargo.toml
axi-rs/crates/axi-bot/src/: bridge.rs  channels.rs  commands.rs  crash_handler.rs  events.rs  frontend.rs  main.rs  permissions.rs  prompts.rs  scheduler.rs  startup.rs  state.rs  streaming.rs  todos.rs
axi-rs/crates/axi-config/: Cargo.toml
axi-rs/crates/axi-config/src/: config.rs  discord.rs  mcp.rs  model.rs
axi-rs/crates/axi-hub/: Cargo.toml
axi-rs/crates/axi-hub/src/: callbacks.rs  hub.rs  lib.rs  lifecycle.rs  messaging.rs  procmux_wire.rs  rate_limits.rs  reconnect.rs  registry.rs  scheduler.rs  shutdown.rs  tasks.rs  types.rs
axi-rs/crates/axi-mcp/: Cargo.toml
axi-rs/crates/axi-mcp/src/: lib.rs  protocol.rs  schedule.rs  tools.rs
axi-rs/crates/axi-supervisor/: Cargo.toml
axi-rs/crates/axi-supervisor/src/: main.rs
axi-rs/crates/axi-voice/src/: gateway.rs  lib.rs
axi-rs/crates/axi/src/: bridge.rs  claude_process.rs  commands.rs  events.rs  flowcoder.rs  lifecycle.rs  main.rs  mcp_tools.rs  messaging.rs  permissions.rs  procmux_wire.rs  reconnect.rs  registry.rs  shutdown.rs  startup.rs  state.rs  types.rs
axi-rs/crates/claudewire/: Cargo.toml
axi-rs/crates/claudewire/src/: config.rs  events.rs  lib.rs  schema.rs  session.rs  transport.rs  types.rs
axi-rs/crates/discordquery/: Cargo.toml
axi-rs/crates/discordquery/src/: main.rs
axi-rs/crates/flowchart/: Cargo.toml
axi-rs/crates/flowchart/examples/: convenience.rs
axi-rs/crates/flowchart/src/: model.rs  resolve.rs  validate.rs  walker.rs
axi-rs/crates/flowcoder-engine/src/: engine_session.rs  main.rs  proxy.rs
axi-rs/crates/flowcoder/src/: claude_session.rs
axi-rs/crates/procmux/: Cargo.toml
axi-rs/crates/procmux/src/: client.rs  server.rs
axi-rs/crates/procmux/tests/: integration.rs
axi-rs/systemd/: axi-test-bot@.service  axi-test-procmux@.service
axi/agents/: __init__.py  bridge_conn.py  discord_helpers.py  flowcoder.py  lifecycle.py  messaging.py  permissions.py  rate_limiting.py  sdk.py  shutdown_mgr.py  state.py  streaming.py
axi/bridge/: __init__.py  __main__.py  client.py  helpers.py  protocol.py  server.py  test_bridge.py
bridge/: ARCHITECTURE.md  __init__.py  __main__.py  client.py  helpers.py  protocol.py  server.py  test_bridge.py
claudewire/: __init__.py  events.py  pyproject.toml  session.py  transport.py
commands/: algorithm.json  discord-test-generator.json  discord-test-planner.json  soul.json
discordquery/: client.py
docs/: testing-flowcoder.md
extensions/auto-dj/: meta.json  prompt.md
extensions/dynamic-radio/: prompt.md
extensions/minflow/: prompt.md  report-records.md
extensions/tailscale/: prompt.md
lint/: rules.py
packs/algorithm/: prompt.md
packs/axi-dev/: prompt.md
plans/: inter-agent-messaging.md  system-prompt-refactor.md
prompts/: SOUL.md  axi_codebase_context.md
prompts/refs/: agent-spawning.md  flowchart-commands.md
research/: preemptive-scheduling.md
research/pai-fabric/: 01-ALGORITHM-ANALYSIS.md  02-MEMORY-SYSTEM.md  03-TELOS-FRAMEWORK.md  04-HOOKS-SYSTEM.md  05-PATTERNS-SYSTEM.md  07-OTHER-IDEAS.md  (+7 more)
scripts/: replay_minflow_ops.py
specs/: spawn-and-kill-smoke.md
tests/: axi_e2e.py  conftest.py  helpers.py  test_advanced.py  test_agent_restart_reuses_channel_generated.py  test_agent_spawn_and_smoke_generated.py  test_agenthub.py  test_basic_echo_master_generated.py  test_bridge.py  test_clear_command_confirms_generated.py  test_compact_command_reports_tokens_generated.py  test_core.py  test_debug_toggle_command_generated.py  test_duplicate_live_agent_name_generated.py  test_edge_cases.py  test_emoji_checkmark_reaction_generated.py  test_killed_agent_rejects_messages_generated.py  test_messaging.py  test_readme_channel_has_content_generated.py  test_spawn_and_kill_smoke_generated.py  test_status_command_reports_generated.py  test_validation.py
(+27 files in other folders)
