[project]
name = "personal-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "discord.py",
    "claude-agent-sdk",
    "python-dotenv",
    "croniter",
    "httpx",
    "tzdata>=2025.3",
    "arrow",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
