[project]
name = "personal-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "discord.py",
    "claude-agent-sdk",
    "python-dotenv",
    "croniter",
    "httpx",
    "tzdata>=2025.3",
    "arrow",
    "flowcoder-engine",
    "flowcoder-flowchart",
]

[tool.uv.sources]
flowcoder-engine = { path = "/home/ubuntu/flowcoder-rewrite/packages/flowcoder-engine" }
flowcoder-flowchart = { path = "/home/ubuntu/flowcoder-rewrite/packages/flowcoder-flowchart" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "F",     # Pyflakes — unused imports, undefined names, etc.
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort — import sorting
    "UP",    # pyupgrade — modernize syntax for Python 3.12+
    "B",     # flake8-bugbear — common bug patterns
    "SIM",   # flake8-simplify — simplifiable code
    "TCH",   # flake8-type-checking — move type-only imports behind TYPE_CHECKING
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "E701",   # multiple statements on one line — used for compact try/except
    "E402",   # module-level import not at top — intentional late imports for organization
    "SIM105", # contextlib.suppress — explicit try/except/pass is clearer in this codebase
    "SIM108", # ternary operator — readability preference
    "SIM115", # open-file-with-context-handler — not always practical (e.g. locks, long-lived files)
    "B010",   # do not call setattr with a constant attribute value
    "RUF006", # asyncio-dangling-task — fire-and-forget tasks are intentional in this bot
    "RUF059", # unused-unpacked-variable — common in destructuring patterns
    "SIM102", # collapsible-if — nested ifs often clearer than combined conditions
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["F841"]  # unused variables common in test setup

[tool.ruff.lint.isort]
known-first-party = ["bot", "supervisor", "handlers", "schedule_tools", "shutdown", "flowcoder", "bridge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
