[workspace]
resolver = "2"
members = [
    "crates/procmux",
    "crates/claudewire",
    "crates/axi-supervisor",
    "crates/axi-config",
    "crates/axi-hub",
    "crates/axi-bot",
    "crates/axi-mcp",
    "crates/discordquery",
]

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
nix = { version = "0.29", features = ["signal", "process"] }
chrono = { version = "0.4", features = ["serde"] }
