[project]
name = "claudewire"
version = "0.1.0"
description = "Claude CLI stream-json protocol wrapper"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = [".."]
include = ["claudewire*"]
