[package]
name = "axi-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axi-bot"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend", "cache"] }
dotenvy = "0.15"
axi-config = { path = "../axi-config" }
axi-hub = { path = "../axi-hub" }
claudewire = { path = "../claudewire" }
procmux = { path = "../procmux" }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
