[package]
name = "axi-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
claudewire = { path = "../claudewire" }
procmux = { path = "../procmux" }
regex-lite = "0.1"

[lints]
workspace = true
