[package]
name = "axi-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axi-config = { path = "../axi-config" }
axi-hub = { path = "../axi-hub" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
