[package]
name = "axi-supervisor"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "axi-supervisor"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }
